*fix: fixed section-wrap breakpoint

--- a/doc2/private/style/variables/variables.scss
+++ b/doc2/private/style/variables/variables.scss
@@ -1,5 +1,5 @@
 // breakpoints
-$section-wrap: 945px;
+$section-wrap: 950px;
 $first-main-breakpoint: 850px;
 $second-main-breakpoint: 750px;
 $third-main-breakpoint: 670px;
